--- a/ca2/index.html
+++ b/ca2/index.html
@@ -7,6 +7,9 @@
         <script src="index.js" type="module"></script>
     </head>
     <body>
+    	<audio autoplay loop>
+  <source src="background_music.mp3"></source>
+</audio>
         <canvas width="512" height="320"></canvas>
     </body>
 </html>
