--- a/ca2/index.html
+++ b/ca2/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+    <html lang='en'>
     <head>
-        <meta charset="utf-8" />
-        <title>Sprites</title>
-        <link rel="stylesheet" href="/index.css"/>
-        <script src="index.js" type="module"></script>
+    	<meta charset="utf-8">
+    	<title> web dev 2 ca2 </title>
     </head>
     <body>
-    	<audio autoplay loop>
-  <source src="background_music.mp3"></source>
-</audio>
-        <canvas width="512" height="320"></canvas>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <h1>web dev 2 CA 2 </h1>
+    <h2> Credits</h2>
+    <ul>
+        <li> sprite art for disarm and reeper enemys <a href="https://untamed.wild-refuge.net/rpgxp.php">Sithjester's Resources</a></li>
+        <li> sprite art for player <a href="https://luizmelo.itch.io/wizard-pack">LuizMelo</a></li>
+        <li> background art  <a href="https://spicestudios.itch.io/dungeon-tileset">SpiceStudios</a></li>
+    </ul>
+    <h2> How To Play</h2>
+    <ol>
+        <li> the player moves around the screen with the arrow keys </li>
+        <li> the enemys with the scythe can kill you if the touch you </li>
+        <li> the enemys without the scythes can disarm you and prevent you from casting spells</li>
+        <li> if you are dissarmed you will see a blue rectangle close to your player and you will not be able to cast spells</li>
+        <li> press e to disarm your opponents</li>
+        <li> press d to sheild yourself from dissarm</li>
+        <li> press a to dash very fast</li>
+        <li> press f to fire a killing spell </li>
+        <li> you pogress by killing the enemys </li>
+    </ol>
+    <h2> Play Game </h2>
+    <a href="game.html">start game</a>
     </body>
-</html>
+    </html>
