--- a/ca2/game.html
+++ b/ca2/game.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Sprites</title>
+        <title>My Game</title>
         <link rel="stylesheet" href="game.css"/>
         <script src="game.js" type="module"></script>
     </head>
     <body>
+        <h1>level:</h1>
+        <p id="level">0</p>
     	<audio autoplay loop>
   <source src="background_music.mp3"></source>
 </audio>
